[CALCITE-5136] Avatica build (or CI) must fail if there are deprecation warnings
Fixes applied are:
 * move `new URL(...)` to `new URI(...).toUrl()`
 * move `Assert.assertThat(...)` to `MatcherAssert.assertThat(...)`
 * move `ExpectedException` to `Assert.assertThrows(...)`
 * in all other cases either propagate the deprecation or suppress it.